--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </header>
     </div>
     <section class="banner">
-        <div class="banner-ppal">
+        <div class="banner-ppal banner-ppal--green">
             <div class="banner-container-img">
-                <img class="banner-img" src="./images/img-road-to-paradise.webp" alt="">
+                <img class="banner-img-auto" src="./images/img-road-to-paradise.webp" alt="iamgen auto">
             </div>
             <div class="banner-container-txt">
                 <h3 class="banner-title-secundario">
@@ -58,34 +58,37 @@
                 <p class="banner-txt">
                     Starbucks® Summer Game is back—don’t miss the chance to win gift cards, Stars and a new Volvo XC40 Recharge.
                 </p>
-                <a class="button" href="">sign in</a>
+                <a class="button" href="">Let’s play</a>
             </div>
-
-        </div>
-        <div class="banner-ppal">
-            <h2 class="banner-title-primary">
-                Make a splash
-            </h2>
-            <p class="banner-txt">
-                Dive into the vibrant flavors of the Mango Dragonfruit and Strawberry Açaí Starbucks Refreshers® beverages, both with bright lemonade.
-            </p>
-            <a class="button" href="">sign in</a>
-        </div>
-        <div class="banner-container-img">
-            <img class="banner-img" src="./images/img-limonada.jpeg" alt="imagen limonada">
         </div>
 
-        <div class="banner-container-img">
-            <img class="banner-img" src="./images/img-helado.jpeg" alt="vaso de helado">
+        <div class="banner-ppal banner-ppal--pink">
+            <div class="banner-container-txt">
+                <h2 class="banner-title-primary">
+                    Make a splash
+                </h2>
+                <p class="banner-txt banner-txt--letter">
+                    Dive into the vibrant flavors of the Mango Dragonfruit and Strawberry Açaí Starbucks Refreshers® beverages, both with bright lemonade.
+                </p>
+                <a class="button" href="">Order now</a>
+            </div>
+            <div class="banner-container-img">
+                <img class="banner-container-img-helado-limonada" src="./images/img-limonada.jpeg" alt="imagen limonada">
+            </div>
         </div>
-        <div class="banner-container-txt">
-            <h3 class="banner-title-secundario">
-                Chase happy things
-            </h3>
-            <p class="banner-txt">
-                Starbucks® Summer Game is back—don’t miss the chance to win gift cards, Stars and a new Volvo XC40 Recharge.
-            </p>
-            <a class="button" href="">sign in</a>
+        <div class="banner-ppal banner-ppal-lemon">
+            <div class="banner-container-img">
+                <img class="banner-container-img-helado-limonada" src="./images/img-helado.jpeg" alt="vaso de helado">
+            </div>
+            <div class="banner-container-txt">
+                <h2 class="banner-title-primary">
+                    Chase happy <br> things
+                </h2>
+                <p class="banner-txt banner-txt--space">
+                    Our Caramel Ribbon Crunch and Mocha Cookie Crumble Frappuccino® blended beverages are made for summer fun.
+                </p>
+                <a class="button" href="">Order now</a>
+            </div>
         </div>
 
     </section>
