se hace footer y se hacen ajustes finales

--- a/index.html
+++ b/index.html
@@ -91,6 +91,127 @@
             </div>
         </div>
 
+        <div class="information">
+            <p class="information-txt">
+                *NO PURCHASE NECESSARY. Participating stores only. Starbucks Partners (employees) are not eligible to win prizes. 
+                Ends 6/17/22. To play and for Official Rules, visit
+            </p>
+            <p class="information-txt">
+                <a class="information-txt-link" href="">https://www.starbuckssummergame.com/#/landing</a>
+            </p>
+            <p class="information-txt information-txt--space">
+                Entrants can receive a maximum of 2 plays per day, plus, bonus opportunities to earn additional plays.
+            </p>
+        </div>
+
+        <footer>
+            <ul class="footer-column">
+                <h4 class="footer-column-title">
+                    About Us
+                </h4>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Our Company</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Our Coffee</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Stories and News</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Starbucks Archive</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Investor Relations</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Customer Service</a>
+                </li>
+            </ul>
+
+            <ul class="footer-column">
+                <h4 class="footer-column-title">
+                    Careers
+                </h4>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Culture and Values</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Inclusion, Diversity, and Equity</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">College Achievement Plan</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Alumni Community</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">U.S. Careers</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">International Careers</a>
+                </li>
+            </ul>
+
+            <ul class="footer-column">
+                <h4 class="footer-column-title">
+                    Social Impact
+                </h4>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">People</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Planet</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Environmental and Social Impact Reporting</a>
+                </li>
+            </ul>
+
+            <ul class="footer-column">
+                <h4 class="footer-column-title">
+                    For Business Partners
+                </h4>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Landlord Support Center</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Suppliers</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Corporate Gift Card Sales</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Office and Foodservice Coffee</a>
+                </li>
+            </ul>
+
+            <ul class="footer-column">
+                <h4 class="footer-column-title">
+                    Order and Pickup
+                </h4>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Order on the App</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Order on the Web</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Delivery</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Order and Pickup Options</a>
+                </li>
+                <li class="footer-column-items">
+                    <a class="footer-column-link" href="">Explore and Find Coffee for Home</a>
+                </li>
+            </ul>
+        </footer>
+        <div class="social-media">
+        <img src="./images/logo-spoty.svg" alt="">
+
+        </div>
+
     </section>
 </body>
 </html>
